--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,10 @@ server:
   servlet:
     context-path: /kafka
 
-spring:
-  kafka:
-    producer:
-      bootstrap-server: localhost:9092
-      group-id: news
+#spring:
+#  kafka:
+#    producer:
+#      bootstrap-server: localhost:9092
+#      group-id: my-customer, my-cricket
+#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
